fixed friendlist avatars being too small

--- a/AlanWalkerTheme/friendList.css
+++ b/AlanWalkerTheme/friendList.css
@@ -84,6 +84,20 @@
   margin-left: 15px;
   margin-top: 10px;
 }
+.peopleListItem-u6dGxF .avatar-2MSPKk svg {
+  width: 80px;
+  height: 80px;
+}
+.peopleListItem-u6dGxF .avatar-2MSPKk svg foreignObject {
+  width: 40px;
+  height: 40px;
+}
+.peopleListItem-u6dGxF .avatar-2MSPKk svg rect {
+  width: 13px;
+  height: 13px;
+  x: 27;
+  y: 27;
+}
 .peopleListItem-u6dGxF .text-3j8t_e {
   margin: 0;
   margin-left: 15px;
